<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Opción de Inicio -->
    <item
        android:id="@+id/navHomeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />

    <!-- Opción de Historial/Mis Triajes -->
    <item
        android:id="@+id/navHospitalesFragment"
        android:icon="@drawable/ic_hospital"
        android:title="@string/menu_hospitals" />

    <!-- Opción de Historial/Mis Triajes -->
    <item
        android:id="@+id/navHistorialFragment"
        android:icon="@drawable/ic_historial"
        android:title="@string/menu_history" />

    <!-- Opción de Aura IA -->
    <item
        android:id="@+id/navAuraIAFragment"
        android:icon="@drawable/ic_chat"
        android:title="@string/menu_aura_ia" />

    <!-- Opción de Perfil -->
    <item
        android:id="@+id/navPerfilFragment"
        android:icon="@drawable/ic_perfil"
        android:title="@string/menu_profile" />

</menu>