<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/ColorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:id="@+id/ivPrioridadRegresar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_regresar"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginEnd="30dp"
                android:text="@string/priority_index"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="22sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/bg_prioridad_corner"
            android:backgroundTint="#EF4444"
            android:layout_marginTop="40dp">
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/ic_priori_rojo"
                tools:ignore="ContentDescription" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_red"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    tools:ignore="HardcodedText" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_red_desc"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    tools:ignore="HardcodedText" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_red_action"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    tools:ignore="HardcodedText" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/bg_prioridad_corner"
            android:backgroundTint="#F97316"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/ic_priori_naranja"
                tools:ignore="ContentDescription" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_orange"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    tools:ignore="HardcodedText" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_orange_desc"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    tools:ignore="HardcodedText" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_orange_action"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    tools:ignore="HardcodedText" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/bg_prioridad_corner"
            android:backgroundTint="#FACC15"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/ic_priori_amarillo"
                tools:ignore="ContentDescription" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_yellow"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    tools:ignore="HardcodedText" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_yellow_desc"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    tools:ignore="HardcodedText" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_yellow_action"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    tools:ignore="HardcodedText" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/bg_prioridad_corner"
            android:backgroundTint="#22C55E"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/ic_priori_verde"
                tools:ignore="ContentDescription" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_green"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    tools:ignore="HardcodedText" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_green_desc"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    tools:ignore="HardcodedText" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_green_action"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    tools:ignore="HardcodedText" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/bg_prioridad_corner"
            android:backgroundTint="#3B82F6"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/ic_priori_azul"
                tools:ignore="ContentDescription" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_blue"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    tools:ignore="HardcodedText" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_blue_desc"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    tools:ignore="HardcodedText" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_blue_action"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    tools:ignore="HardcodedText" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>