<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorPrimary">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- Ícono Principal -->
            <ImageView
                android:layout_width="109dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_crear_cuenta"
                tools:ignore="ContentDescription" />

            <!-- Título -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/create_account"
                android:textSize="32sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <!-- Campo: DNI -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilDni"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/dni"
                    android:textColorHint="@color/black"
                    app:hintTextColor="#757575"
                    android:layout_marginTop="15dp"
                    app:expandedHintEnabled="false"
                    app:boxStrokeWidth="2dp"
                    app:boxStrokeWidthFocused="2dp"
                    app:boxStrokeColor="#757575"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDni"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_dni"
                        android:textColorHint="@color/black"
                        android:textColor="@color/black"
                        android:maxLength="8"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnBuscarDni"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    android:text="@string/search"
                    android:textColor="@color/white"
                    app:backgroundTint="#1565D8"
                    app:cornerRadius="8dp" />
            </LinearLayout>
            <!-- Campo: Nombre Completo -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:textColorHint="@color/black"
                app:hintTextColor="#757575"
                android:layout_marginTop="15dp"
                app:expandedHintEnabled="false"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="#757575"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_full_name"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Campo: Correo Electrónico -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/black"
                app:hintTextColor="#757575"
                android:layout_marginTop="15dp"
                app:expandedHintEnabled="false"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="#757575"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Campo: Contraseña -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:textColorHint="@color/black"
                app:hintTextColor="#757575"
                app:expandedHintEnabled="false"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="#757575"
                app:helperText="Debe contener al menos 8 caracteres, una mayúscula y números"
                app:endIconMode="password_toggle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Campo: Confirmar Contraseña -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/confirm_your_password"
                android:textColorHint="@color/black"
                app:hintTextColor="#757575"
                app:expandedHintEnabled="false"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="#757575"
                app:helperText="Debe contener al menos 8 caracteres, una mayúscula y números"
                app:endIconMode="password_toggle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_your_password"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Botón Registrarse -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:maxWidth="320dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:backgroundTint="@color/btn_selector_login"
                app:cornerRadius="24dp" />

            <!-- Footer Enlace de Retorno -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_account"
                    android:textSize="14sp"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/tvIniciaSesionAqui"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/login"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="#1565D8" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>